@@ -3,6 +3,8 @@ Gaim: The Pimpin' Penguin IM Client that's good for the soul!
 version 0.79cvs:
 	Bug Fixes:
 	* Non-looping animated icons no longer cause Gaim to freeze
+	* Fixed a crash in SILC that sometimes happened when resolving
+	  the buddy list (Pekka Riikonen)
 
 version 0.78 (05/30/2004):
 	New Features:
